--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -1,12 +1,17 @@
 name: GitHub Actions Get Modified Files
-on: [push, pull_request]
+on: [pull_request]
 jobs:
   changedfiles:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
       all: ${{ steps.changes.outputs.all}}
+        description: 'All changes'
       ts: ${{ steps.changes.outputs.ts }}
+        description: 'Grouped changes'
+      placeholder:
+        description: 'placeholder value'
+        value: 'Always on'
     steps:
         # Make sure we have some code to diff.
       - name: Checkout repository
@@ -19,15 +24,15 @@ jobs:
         run: |
           echo "this is the pull_request.base.sha: ${{ github.event.pull_request.base.sha }} "
           echo "this is the github.sha: ${{ github.sha }} "
-          git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
-          echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
+          git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  
+          echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }})"
           echo "::set-output name=ts::$(git diff --name-status --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
   lint:
     runs-on: ubuntu-latest
     # require the first job to have ran
     needs: changedfiles
     # only run there are changed files
-    if: ${{needs.changedfiles.outputs.all}}
+    if: ${{needs.changedfiles.outputs.placeholder}}
     steps:
       - name: echo changed files
         run: |
