--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -6,9 +6,7 @@ jobs:
     # Map a step output to a job output
     outputs:
       all: ${{ steps.changes.outputs.all}}
-        description: 'All changes'
       ts: ${{ steps.changes.outputs.ts }}
-        description: 'Grouped changes'
     steps:
         # Make sure we have some code to diff.
       - name: Checkout repository
@@ -19,10 +17,11 @@ jobs:
         id: changes
         # Set outputs using the command.
         run: |
-          echo "this is the pull_request.base.sha: ${{ github.event.pull_request.base.sha }} "
-          echo "this is the github.sha: ${{ github.sha }} "
-          git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}  
-          echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }})"
+          echo "Starting Get Changed files"
+          echo "PR SHA: $${{ github.event.pull_request.base.sha }}  "
+          echo "github.sha: ${{ github.sha }}"
+          git diff --name-status $${{ github.event.pull_request.base.sha }} ${{ github.sha }}
+          echo "::set-output name=all::$(git diff --name-status $${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
           echo "::set-output name=ts::$(git diff --name-status --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
   lint:
     runs-on: ubuntu-latest
