--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -17,11 +17,10 @@ jobs:
         id: changes
         # Set outputs using the command.
         run: |
-          echo "Starting Get Changed files"
-          echo "PR SHA: $${{ github.event.pull_request.base.sha }}  "
-          echo "github.sha: ${{ github.sha }}"
-          git diff --name-status $${{ github.event.pull_request.base.sha }} ${{ github.sha }}
-          echo "::set-output name=all::$(git diff --name-status $${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
+          echo "this is the pull_request.base.sha: ${{ github.event.pull_request.base.sha }} "
+          echo "this is the github.sha: ${{ github.sha }} "
+          git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
+          echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
           echo "::set-output name=ts::$(git diff --name-status --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
   lint:
     runs-on: ubuntu-latest
@@ -36,4 +35,3 @@ jobs:
           echo ${{needs.changedfiles.outputs.ts}}
           echo "echoing outputs.all"
           echo ${{needs.changedfiles.outputs.all}}
-
