CI: fix action docker

--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -41,12 +41,15 @@ jobs:
           echo "echoing outputs.all"
           echo ${{needs.changedfiles.outputs.all}}
   tsc:
-    using: 'docker'
-    image: 'Dockerfile' 
-    env:
-      tableau_pat_name: ${{ secrets.tableau_pat_name }}
-      tableau_pat_token: ${{ secrets.tableau_pat_token }}
-      tableau_site: ${{ tableau_site }}
+    needs: lint
+    steps:
+      - name: Attempt docker
+        using: 'docker'
+        image: 'Dockerfile' 
+        env:
+          tableau_pat_name: ${{ secrets.tableau_pat_name }}
+          tableau_pat_token: ${{ secrets.tableau_pat_token }}
+          tableau_site: ${{ tableau_site }}
 
-    args:
-      - ${{needs.changedfiles.outputs.all}}
+        args:
+          - ${{needs.changedfiles.outputs.all}}
