--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -44,6 +44,8 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Attempt docker
         uses: ./.github/action-tsc
         env:
