CI: adds step checkout 2

--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -41,7 +41,7 @@ jobs:
           echo "echoing outputs.all"
           echo ${{needs.changedfiles.outputs.all}}
   tsc:
-    needs: lint
+    needs: changedfiles
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
