--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -20,7 +20,7 @@ jobs:
           echo "this is the pull_request.base.sha: ${{ github.event.pull_request.base.sha }} "
           echo "this is the github.sha: ${{ github.sha }} "
           git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
-          echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '.twb\|.tds' | xargs )"
+          echo "::set-output name=all::$({ echo \" ; git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '.twb\|.tds' | sed 's/\t/ /g' | xargs ; echo \" ; }  | sed 's/\n/ /g' | sed 's/\r/ /g' )"
           echo "::set-output name=ts::$(git diff --name-status --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
   lint:
     runs-on: ubuntu-latest
