--- a/.github/workflows/github-actions-get-modified-files.yml
+++ b/.github/workflows/github-actions-get-modified-files.yml
@@ -22,6 +22,15 @@ jobs:
           git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }}
           echo "::set-output name=all::$(git diff --name-status ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '.twb\|.tds' | xargs )"
           echo "::set-output name=ts::$(git diff --name-status --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
+
+      - run: mkdir -p tmp/artifact
+      - run: echo hello > tmp/artifact/world.txt
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: tmp/artifact/world.txt
+          retention-days: 1        
   lint:
     runs-on: ubuntu-latest
     # require the first job to have ran
@@ -46,6 +55,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        id: download
+        with:
+          name: my-artifact
+          path: ~/tmp
+      - name: 'Echo download path'
+        run: echo ${{steps.download.outputs.download-path}}
       - name: Attempt docker
         uses: ./.github/action-tsc
         env:
